--- a/src/components/Buttons/Button.css
+++ b/src/components/Buttons/Button.css
@@ -112,3 +112,32 @@ button:focus {
 .btn-secondary:focus {
   outline: none;
 }
+
+
+.btn-secondaryy {
+  margin-left: 10px;
+  padding: 10px 20px;
+  /* border: 2px solid #0072ff;  */
+  background: none;
+  color: #0072ff;
+  cursor: pointer;
+  background-color: white;
+  border-radius: 50px;
+  font-weight: 600;
+  transition: color 0.3s, border-color 0.3s, box-shadow 0.3s; /* Transition box-shadow instead of transform */
+}
+
+
+
+.btn-secondaryy:hover {
+  color: white;
+  border-color: #0072ff; 
+  box-shadow: 0 6px 12px rgba(0, 114, 255, 0.3); 
+  background-color: #0072ff;
+}
+
+.secondaryyy{
+  display: flex;
+  justify-content: end;
+  width: 80%;
+}
