--- a/src/components/Header/Header1.css
+++ b/src/components/Header/Header1.css
@@ -63,7 +63,7 @@
     font-size: 1.5rem;
     font-weight: bold;
     cursor: pointer;
-    margin-right: 8%;
+    margin-right: 0%;
 }
 
 .btn {
@@ -85,4 +85,13 @@
 
 .nav.scrolled {
     box-shadow: 0 0 20px rgba(0, 0, 255, 0.5), 0 0 40px rgba(0, 0, 255, 0.3), 0 0 60px rgba(0, 0, 255, 0.2), 0 0 80px rgba(0, 0, 255, 0.1); 
+}
+
+.header_full_logo{
+    width:50%;
+    height:50%;
+}
+.header_short_logo{
+    width:100%;
+    height: 20%;
 }
